--- a/.github/workflows/pipeline.yaml
+++ b/.github/workflows/pipeline.yaml
@@ -181,7 +181,7 @@ jobs:
 
   deploy-testing:
     if: github.ref == 'refs/heads/dev'
-    needs: [build-and-package]
+    needs: [build-and-package-for-testing]
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
@@ -215,7 +215,7 @@ jobs:
 
   integration-test:
     if: github.ref == 'refs/heads/main'
-    needs: [deploy-testing]
+    needs: [build-and-package-for-production]
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
