--- a/photo_lambda/pom.xml
+++ b/photo_lambda/pom.xml
@@ -5,7 +5,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>org.umaxcode</groupId>
-    <artifactId>photo-blog-application</artifactId>
+    <artifactId>photo_lambda</artifactId>
     <version>1.0-SNAPSHOT</version>
     <packaging>jar</packaging>
 
