--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,10 @@
-### IntelliJ IDEA ###
-.idea/modules.xml
-.idea/jarRepositories.xml
-.idea/compiler.xml
-.idea/libraries/
-*.iws
-*.iml
-*.ipr
+# Ignore all .idea files except necessary ones
+.idea/*
+!.idea/misc.xml
+!.idea/modules.xml
+!.idea/libraries/
+!.idea/codeStyles/
+!.idea/inspectionProfiles/
+!.idea/vcs.xml
 
 .aws-sam
