--- a/statemachine/pom.xml
+++ b/statemachine/pom.xml
@@ -60,6 +60,12 @@
             <artifactId>junit-jupiter</artifactId>
             <scope>test</scope>
         </dependency>
+
+        <dependency>
+            <groupId>software.amazon.awssdk</groupId>
+            <artifactId>s3</artifactId>
+            <version>2.25.27</version>
+        </dependency>
     </dependencies>
 
     <dependencyManagement>
