feat: add table name and bucket name (staging, primary) as environment variable to ImageProcessorLambdaHandler in template.yaml

--- a/template.yaml
+++ b/template.yaml
@@ -210,6 +210,12 @@ Resources:
               - s3:PutObject
             Resource: !Sub ${PrimaryBucket.Arn}/*
       CodeUri: statemachine
+      Environment:
+        Variables:
+          AWS_DYNAMODB_TABLE_NAME: !Ref DynamoTableName
+          AWS_S3_STAGE_BUCKET_NAME: !Sub ${AWS::StackName}-staging-bucket
+          AWS_S3_PRIMARY_BUCKET_NAME: !Sub ${AWS::StackName}-primary-bucket
+
 
   PrimaryBucket: # Primary S3 Bucket (for storing processed images with watermarks)
     Type: AWS::S3::Bucket
