--- a/statemachine/src/main/resources/application.properties
+++ b/statemachine/src/main/resources/application.properties
@@ -1,3 +1,7 @@
 # Reduce logging level to make sure the application works with SAM local
 # https://github.com/aws/serverless-java-container/issues/134
 logging.level.root=WARN
+
+application.aws.tableName=${AWS_DYNAMODB_TABLE_NAME:photoDB}
+application.aws.stageBucketName=${AWS_S3_STAGE_BUCKET_NAME:stageBucket}
+application.aws.primaryBucketName=${AWS_S3_PRIMARY_BUCKET_NAME:primaryBucket}
