feat: add dynamodb put permission to image processor lambda function

--- a/template.yaml
+++ b/template.yaml
@@ -209,6 +209,11 @@ Resources:
             Action:
               - s3:PutObject
             Resource: !Sub ${PrimaryBucket.Arn}/*
+        - Statement:
+            Effect: Allow
+            Action:
+              - dynamodb:PutItem
+            Resource: !GetAtt PicturesGlobalTable.Arn
       CodeUri: statemachine
       Environment:
         Variables:
