--- a/statemachine/pom.xml
+++ b/statemachine/pom.xml
@@ -78,6 +78,18 @@
             <artifactId>sns</artifactId>
             <version>2.25.27</version>
         </dependency>
+
+        <dependency>
+            <groupId>com.amazonaws</groupId>
+            <artifactId>aws-lambda-java-events</artifactId>
+            <version>3.14.0</version>
+        </dependency>
+
+        <dependency>
+            <groupId>software.amazon.awssdk</groupId>
+            <artifactId>apigatewaymanagementapi</artifactId>
+            <version>2.25.27</version>
+        </dependency>
     </dependencies>
 
     <dependencyManagement>
