feat: add dynamodb:GetItem permission to allow image processing lambda to retrieve websocket connectionId

--- a/template.yaml
+++ b/template.yaml
@@ -222,6 +222,11 @@ Resources:
               Action:
                 - execute-api:ManageConnections
               Resource: !Sub arn:aws:execute-api:${AWS::Region}:${AWS::AccountId}:${WebSocketApi}/*
+        - Statement:
+            - Effect: Allow
+              Action:
+                - dynamodb:GetItem
+              Resource: !GetAtt WebSocketConnectionsTable.Arn
       CodeUri: statemachine
       Environment:
         Variables:
