fix: fix policy for statemachine to invoke ImageProcessingFailureNotificationFunction

--- a/template.yaml
+++ b/template.yaml
@@ -179,6 +179,8 @@ Resources:
       Policies:
         - LambdaInvokePolicy:
             FunctionName: !Ref ProcessImageFunction
+        - LambdaInvokePolicy:
+            FunctionName: !Ref ImageProcessingFailureNotificationFunction
       Events:
         StateChange:
           Type: EventBridgeRule
