--- a/template.yaml
+++ b/template.yaml
@@ -126,7 +126,7 @@ Resources:
       UserPoolId: !Ref UserPool
 
   PicturesGlobalTable: # DynamoDB Global Table for image info
-    Type: AWS::DynamoDB::GlobalTable
+    Type: AWS::DynamoDB::Table
     Properties:
       TableName: !Sub ${AWS::StackName}-${DynamoTableName}
       BillingMode: PAY_PER_REQUEST
@@ -153,13 +153,13 @@ Resources:
               KeyType: HASH
           Projection:
             ProjectionType: ALL
-      Replicas:
-        - Region: !Ref PrimaryRegion
-        - Region: !Ref DRRegion
-      SSESpecification:
-        SSEEnabled: true
-      StreamSpecification:
-        StreamViewType: NEW_IMAGE
+#      Replicas:
+#        - Region: !Ref PrimaryRegion
+#        - Region: !Ref DRRegion
+#      SSESpecification:
+#        SSEEnabled: true
+#      StreamSpecification:
+#        StreamViewType: NEW_IMAGE
 
   StagingBucket: # Staging S3 Bucket (for uploading images before processing)
     Type: AWS::S3::Bucket
