chore: add AWS_S3_PRIMARY_BUCKET_NAME config property to application.properties

--- a/photo_lambda/src/main/resources/application.properties
+++ b/photo_lambda/src/main/resources/application.properties
@@ -6,3 +6,4 @@ logging.level.root=WARN
 application.aws.region=${AWS_REGION:us-east-1}
 application.aws.tableName=${AWS_DYNAMODB_TABLE_NAME:photoDB}
 application.aws.stageBucketName=${AWS_S3_STAGE_BUCKET_NAME:stageBucket}
+application.aws.primaryBucketName=${AWS_S3_PRIMARY_BUCKET_NAME:primaryBucket}
