fix: fix permission to delete object in PrimaryBucket

--- a/template.yaml
+++ b/template.yaml
@@ -49,6 +49,7 @@ Resources:
             Effect: Allow
             Action:
               - s3:GetObject
+              - s3:DeleteObject
             Resource: !Sub ${PrimaryBucket.Arn}/*
       CodeUri: photo_lambda
       Environment:
