feat: add configurations to enable lambda function as resource server

--- a/photo_lambda/src/main/resources/application.properties
+++ b/photo_lambda/src/main/resources/application.properties
@@ -2,6 +2,8 @@
 # https://github.com/aws/serverless-java-container/issues/134
 logging.level.root=WARN
 
+spring.security.oauth2.resourceserver.jwt.issuer-uri=https://cognito-idp.${AWS_REGION:us-east-1}.amazonaws.com/${AWS_COGNITO_USER_POOL_ID:pool-id}
+
 # aws configurations
 application.aws.region=${AWS_REGION:us-east-1}
 application.aws.tableName=${AWS_DYNAMODB_TABLE_NAME:photoDB}
