--- a/photo_lambda/pom.xml
+++ b/photo_lambda/pom.xml
@@ -78,6 +78,11 @@
             <artifactId>s3</artifactId>
             <version>2.25.27</version>
         </dependency>
+
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-oauth2-resource-server</artifactId>
+        </dependency>
     </dependencies>
 
     <dependencyManagement>
