--- a/template.yaml
+++ b/template.yaml
@@ -142,6 +142,14 @@ Resources:
       Environment:
         Variables:
           IMG_PROCESSING_FAILURE_TOPIC: !Ref ImageProcessingFailureTopic
+      Events:
+        CognitoEvents:
+          Type: Cognito
+          Properties:
+            UserPool: !Ref UserPool
+            Trigger:
+                - PostConfirmation
+                - PostAuthentication
 
   PicturesGlobalTable: # DynamoDB Global Table for image info
     Type: AWS::DynamoDB::Table
