--- a/cognito_lambda/pom.xml
+++ b/cognito_lambda/pom.xml
@@ -66,6 +66,12 @@
             <artifactId>aws-lambda-java-events</artifactId>
             <version>3.14.0</version>
         </dependency>
+
+        <dependency>
+            <groupId>software.amazon.awssdk</groupId>
+            <artifactId>sns</artifactId>
+            <version>2.25.27</version>
+        </dependency>
     </dependencies>
 
     <dependencyManagement>
