--- a/template.yaml
+++ b/template.yaml
@@ -373,11 +373,20 @@ Resources:
     Properties:
       TableName: !Sub ${AWS::StackName}-WebSocketConnections
       AttributeDefinitions:
+        - AttributeName: connectionId
+          AttributeType: S
         - AttributeName: email
           AttributeType: S
       KeySchema:
-        - AttributeName: email
+        - AttributeName: connectionId
           KeyType: HASH
+      GlobalSecondaryIndexes:
+        - IndexName: emailIndex
+          KeySchema:
+            - AttributeName: email
+              KeyType: HASH
+          Projection:
+            ProjectionType: ALL
       BillingMode: PAY_PER_REQUEST
 
   WebSocketDeployment:
