fix: add dynamodb:Query action to ProcessImageFunction policies

--- a/template.yaml
+++ b/template.yaml
@@ -252,8 +252,12 @@ Resources:
             Effect: Allow
             Action:
               - dynamodb:PutItem
-              - dynamodb:Query
             Resource: !GetAtt PicturesGlobalTable.Arn
+        - Statement:
+            Effect: Allow
+            Action:
+              - dynamodb:Query
+            Resource: !GetAtt WebSocketConnectionsTable.Arn
         - Statement:
             - Effect: Allow
               Action:
