--- a/.github/workflows/pipeline.yaml
+++ b/.github/workflows/pipeline.yaml
@@ -3,12 +3,12 @@ name: Pipeline
 on:
   push:
     branches:
-      - 'main'
-      - 'dev'
-      - 'feat**'
+      - "main"
+      - "dev"
+      - "feat**"
   delete:
     branches:
-      - 'feat**'
+      - "feat**"
 
 env:
   PIPELINE_USER_ACCESS_KEY_ID: ${{ secrets.PIPELINE_USER_ACCESS_KEY_ID }}
@@ -105,7 +105,11 @@ jobs:
             --region ${TESTING_REGION} \
             --s3-bucket ${TESTING_ARTIFACTS_BUCKET} \
             --no-fail-on-empty-changeset \
-            --role-arn ${TESTING_CLOUDFORMATION_EXECUTION_ROLE}
+            --role-arn ${TESTING_CLOUDFORMATION_EXECUTION_ROLE} \
+            -parameter-overrides \
+              CustomDomainName=${{ secrets.CUSTOM_DOMAIN_NAME }} \
+              PrimaryACMCertificateArn=${{ secrets.PRIMARY_ACM_CERTIFICATE_ARN }} \
+              DRACMCertificateArn=${{ secrets.DR_ACM_CERTIFICATE_ARN }}
 
   build-and-package-for-testing:
     if: github.ref == 'refs/heads/dev'
@@ -145,7 +149,7 @@ jobs:
 
   build-and-package-for-production:
     if: github.ref == 'refs/heads/main'
-    needs: [ test ]
+    needs: [test]
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
